--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
     </div>
 
     <main class="wrapper grid">
-        <div class="item">
+        <div class="item-big"> <!---item-big クラス追加　-->
             <img src="images/menu1.jpg" alt="">
             <p>アボカドトースト</p>
         </div>
